Reorganize folder structure to split "segments" from "clusters"
I wanted to cleanly split a workflow for segments from a workflow for clusters. The intention is to first run the Snakefile_segments and then run the Snakefile_clusters. Segments uses "segments-data/", "segments-results" and "segments-auspice/".

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@ data/
 metadata/
 results/
 auspice/
-auspice-who/
+segments-data/
+segments-results/
+segments-auspice/
+clusters-data/
+clusters-results/
+clusters-auspice/
 build/
 logs/
 figures/
