Update auspice export config

--- a/config/auspice_config_h1n1pdm.json
+++ b/config/auspice_config_h1n1pdm.json
@@ -1,5 +1,5 @@
 {
-  "title": "Real-time tracking of influenza A/H1N1pdm evolution",
+  "title": "Real-time tracking of influenza A/H1N1pdm evolution by SFS",
   "color_options": {
     "gt": {
       "menuItem": "genotype",
@@ -38,7 +38,19 @@
       "legendTitle": "Cluster",
       "menuItem": "cluster",
       "type": "discrete"
-    }   
+    },
+    "age_category": {
+      "key": "age_category",
+      "legendTitle": "Age category",
+      "menuItem": "age category",
+      "type": "discrete"
+    },
+    "site_category": {
+      "key": "site_category",
+      "legendTitle": "Site category",
+      "menuItem": "site category",
+      "type": "discrete"
+    }
   },
   "geo": [
     "country",
@@ -50,18 +62,16 @@
     "geoResolution": "region"
   },
   "maintainer": [
-    "Trevor Bedford and Barney Potter",
+    "Trevor Bedford",
     "http://bedford.io/"
   ],
   "filters": [
     "clade_membership",
-    "region",
-    "country",
-    "authors"
+    "region"
   ],
   "panels": [
     "tree",
-    "map",    
+    "map",
     "entropy",
     "frequencies"
   ],
