--- a/config/auspice_config_h3n2.json
+++ b/config/auspice_config_h3n2.json
@@ -53,7 +53,8 @@
     }
   },
   "geo": [
-    "region"
+    "region",
+    "location"
   ],
   "defaults": {
     "mapTriplicate": true,
@@ -68,7 +69,7 @@
     "clade_membership",
     "region",
     "age_category",
-    "site_category"    
+    "site_category"
   ],
   "panels": [
     "tree",
