Update metadata to include site type and authors

--- a/config/auspice_config_h1n1pdm.json
+++ b/config/auspice_config_h1n1pdm.json
@@ -56,6 +56,12 @@
       "legendTitle": "Site category",
       "menuItem": "site category",
       "type": "discrete"
+    },
+    "site_type": {
+      "key": "site_type",
+      "legendTitle": "Site type",
+      "menuItem": "site type",
+      "type": "discrete"
     }
   },
   "geo": [
@@ -75,7 +81,8 @@
     "clade_membership",
     "region",
     "age_category",
-    "site_category"
+    "site_category",
+    "site_type"
   ],
   "panels": [
     "tree",
