--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ results/
 auspice/
 build/
 logs/
-figures/
+analyses/figures/
+analyses/tables/
 targets/
 aggregated/
 config/reference_h3n2_genome.gb
