--- a/config/auspice_config_vic.json
+++ b/config/auspice_config_vic.json
@@ -1,5 +1,5 @@
 {
-  "title": "Seattle Flu Study // Tracking of influenza B/Vic evolution",
+  "title": "Seattle Flu Study // Tracking of influenza B/Vic evolution and spread",
   "color_options": {
     "gt": {
       "menuItem": "genotype",
