--- a/config/auspice_config_yam.json
+++ b/config/auspice_config_yam.json
@@ -14,10 +14,10 @@
       "key": "num_date"
     },
     "region": {
-      "key":"region",
-      "legendTitle":"Region",
-      "menuItem":"region",
-      "type":"discrete"
+      "key": "region",
+      "legendTitle": "Region",
+      "menuItem": "region",
+      "type": "discrete"
     },
     "clade_membership": {
       "key": "clade_membership",
@@ -26,8 +26,6 @@
       "type": "discrete"
     },
     "lbi": {
-      "vmin": 0,
-      "vmax": 0.7,
       "legendTitle": "local branching index",
       "key": "lbi",
       "menuItem": "local branching index",
@@ -38,10 +36,27 @@
       "legendTitle": "Cluster",
       "menuItem": "cluster",
       "type": "discrete"
+    },
+    "age_category": {
+      "key": "age_category",
+      "legendTitle": "Age category",
+      "menuItem": "age category",
+      "type": "discrete"
+    },
+    "site_category": {
+      "key": "site_category",
+      "legendTitle": "Site category",
+      "menuItem": "site category",
+      "type": "discrete"
+    },
+    "flu_shot": {
+      "key": "flu_shot",
+      "legendTitle": "Vaccinated",
+      "menuItem": "vaccinated",
+      "type": "discrete"
     }
   },
   "geo": [
-    "country",
     "region"
   ],
   "defaults": {
@@ -50,20 +65,20 @@
     "geoResolution": "region"
   },
   "maintainer": [
-    "Trevor Bedford and Barney Potter",
+    "Trevor Bedford",
     "http://bedford.io/"
   ],
   "filters": [
     "clade_membership",
     "region",
-    "country",
-    "authors"
+    "age_category",
+    "site_category",
+    "flu_shot"
   ],
   "panels": [
     "tree",
     "map",
-    "entropy",
-    "frequencies"
+    "entropy"
   ],
   "vaccine_choices": {
     "B/Shanghai/361/2002": "2004-09-25",
